--- a/app/views/v5-enquiry/adhoc-screens/you-have-hc3-cert-for-limited-help.html
+++ b/app/views/v5-enquiry/adhoc-screens/you-have-hc3-cert-for-limited-help.html
@@ -17,16 +17,12 @@ You have a HC3 certificate for limited help
     <form action="check-name-input" method="get" class="form">
 
       <span class="nhsuk-caption-m">Confirm your entitlement</span>
-      <h1 class="nhsuk-heading-l">You have a HC3 certificate for limited help</h1>
+      <h1 class="nhsuk-heading-l">You have a HC3 certificate for limited help with health costs</h1>
       <div class="nhsuk-form-group">
 
-<p>We cannot verify your entitlement at the moment. Please contact us using the details below for further assistance:</p>
+<p>We cannot verify your entitlement at the moment.</p>
 
-<div class="nhsuk-inset-text">
-<span class="nhsuk-u-visually-hidden">Information: </span>
-<p>Email us at: <a href="https://yellowcard.mhra.gov.uk/" title="External website">nhsbsa.decs@nhsbsa.nhs.uk</a></p>
-<p>Call us on: 0300 330 1293</p>
-</div>
+<p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us for further assistance</a></p>
 
 <h3>Feedback</h3>
 
