--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -307,7 +307,7 @@ NHS.UK prototype kit
                 </strong></td>
             </tr>
 
-          <tbody class="nhsuk-table__body">
+          <!-- <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
               <td class="nhsuk-table__cell">We could not verify the extra details you supplied</td>
               <td class="nhsuk-table__cell "><a
@@ -328,7 +328,7 @@ NHS.UK prototype kit
                     PECS
                   </strong></td>
             </tr>
-          </tbody>
+          </tbody> -->
 
           <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
@@ -842,8 +842,19 @@ NHS.UK prototype kit
 
           <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
-              <td class="nhsuk-table__cell">Text field error</td>
+              <td class="nhsuk-table__cell">Text field error - NO BACK BUTTON</td>
               <td class="nhsuk-table__cell "><a href="v5-enquiry/error-messages/text-field-error">Text field</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Text field error - WITH BACK BUTTON</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/error-messages/text-field-error-back-button">Text field</a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
                   BOTH
                 </strong></td>
