--- a/app/views/v5-enquiry/error-messages/text-field-error-back-button.html
+++ b/app/views/v5-enquiry/error-messages/text-field-error-back-button.html
@@ -49,7 +49,7 @@
 
           <span class="nhsuk-caption-m">Confirm your entitlement</span>
     <h2>Do you know your [Benefit] number?</h2>
-    <div class="nhsuk-form-group">
+    
 
 
       <div class="nhsuk-hint" id="contact-hint">
@@ -57,7 +57,7 @@
         find the number on the certificate.
       </div>
 
-
+<div class="nhsuk-form-group nhsuk-form-group--error">
       <form action="do-you-know-number" method="post" class="form">
         <div class="nhsuk-radios nhsuk-radios--conditional">
 
@@ -79,7 +79,7 @@
               <span class="nhsuk-error-message" id="name-error">
                 <span class="nhsuk-u-visually-hidden">Error:</span> Enter your Certificate number
               </span>
-              <input class="nhsuk-input nhsuk-u-width-one-half" id="cert-number-input" name="certificatenumber"
+              <input class="nhsuk-input nhsuk-u-width-one-half nhsuk-input--error" id="cert-number-input" name="certificatenumber"
                 type="text">
             </div>
 
