--- a/app/views/v5-enquiry/error-messages/text-field-error-back-button.html
+++ b/app/views/v5-enquiry/error-messages/text-field-error-back-button.html
@@ -46,7 +46,7 @@
               </ul>
             </div>
           </div>
-
+<div class="nhsuk-form-group nhsuk-form-group--error"></div>
           <span class="nhsuk-caption-m">Confirm your entitlement</span>
     <h2>Do you know your [Benefit] number?</h2>
     
@@ -57,7 +57,7 @@
         find the number on the certificate.
       </div>
 
-<div class="nhsuk-form-group nhsuk-form-group--error">
+
       <form action="do-you-know-number" method="post" class="form">
         <div class="nhsuk-radios nhsuk-radios--conditional">
 
