--- a/app/views/v5-enquiry/error-messages/text-field-error-back-button.html
+++ b/app/views/v5-enquiry/error-messages/text-field-error-back-button.html
@@ -3,7 +3,7 @@
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
 {% block pageTitle %}
-
+Did you know your [Benefit] number?
 {% endblock %}
 
 {% block outerContent %}
@@ -12,45 +12,39 @@
 
 {% block content %}
 
+<div class="nhsuk-back-link">
+  <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
+    <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
+      aria-hidden="true" height="24" width="24">
+      <path
+        d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z">
+      </path>
+    </svg>
+    Go back</a>
+</div>
+
+<div class="nhsuk-grid-row">
+  <div class="nhsuk-grid-column-two-thirds">
+
+    <div class="nhsuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
+      <h2 class="nhsuk-error-summary__title" id="error-summary-title">
+        There is a problem
+      </h2>
+      <div class="nhsuk-error-summary__body">
+        
+        <ul class="nhsuk-list nhsuk-error-summary__list" role="list">
+          <li>
+            <a href="#example-error-1">Enter your certificate number</a>
+          </li>
+        </ul>
+      </div>
+    </div>
 
 
-<div class="nhsuk-width-container">
-
-  <div class="nhsuk-back-link nhsuk-u-margin-bottom-0">
-
-    <a class="nhsuk-back-link__link" href="#">
-      <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-        aria-hidden="true" height="24" width="24">
-        <path
-          d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z">
-        </path>
-      </svg>
-      Go back</a>
-  </div>
-
-  <main class="nhsuk-main-wrapper" id="maincontent" role="main">
-
-    <div class="nhsuk-grid-row">
-      <div class="nhsuk-grid-column-two-thirds">
-        <form>
-
-          <div class="nhsuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
-            <h2 class="nhsuk-error-summary__title" id="error-summary-title">
-              There is a problem
-            </h2>
-            <div class="nhsuk-error-summary__body">
-              <ul class="nhsuk-list nhsuk-error-summary__list" role="list">
-                <li>
-                  <a href="#name">Enter your certificate number</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-<div class="nhsuk-form-group nhsuk-form-group--error"></div>
-          <span class="nhsuk-caption-m">Confirm your entitlement</span>
-    <h2>Do you know your [Benefit] number?</h2>
     
-
+    <div class="nhsuk-form-group nhsuk-form-group--error">
+<span class="nhsuk-caption-m">Confirm your entitlement</span>
+    <h2>Do you know your [Benefit] number?</h2>
 
       <div class="nhsuk-hint" id="contact-hint">
         You do not have to tell us your certificate number, but telling us can help us find your certificate. You can
@@ -62,7 +56,6 @@
         <div class="nhsuk-radios nhsuk-radios--conditional">
 
           <div class="nhsuk-radios__item">
-          
             <input class="nhsuk-radios__input" id="benefit-exemption" name="exemption" type="radio" value="yes"
               aria-controls="conditional-contact-1" aria-expanded="false" checked>
             <label class="nhsuk-label nhsuk-radios__label" for="contact-1">
@@ -73,12 +66,14 @@
           <div class="nhsuk-radios__conditional nhsuk-radios__conditional--hidden" id="conditional-contact-1">
 
             <div class="nhsuk-form-group">
+              
               <label class="nhsuk-label" for="email">
                 Certificate number
               </label>
-              <span class="nhsuk-error-message" id="name-error">
-                <span class="nhsuk-u-visually-hidden">Error:</span> Enter your Certificate number
+              <span class="nhsuk-error-message" id="dob-day-error-error">
+                <span class="nhsuk-u-visually-hidden">Error:</span> Enter your certificate number
               </span>
+              
               <input class="nhsuk-input nhsuk-u-width-one-half nhsuk-input--error" id="cert-number-input" name="certificatenumber"
                 type="text">
             </div>
@@ -96,20 +91,17 @@
         </fieldset>
 
     </div>
-
-          <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
-            Continue
-          </button>
-          <p class="navigation"><a class="cancel" href="respond-to-your-letter">Cancel</a></p>
-
-        </form>
-      </div>
+    <div class="nhsuk-form-group">
+      <button class="nhsuk-button" type="submit">
+        Continue
+      </button>
     </div>
+    </form>
 
-  </main>
-</div>
+    <p class="navigation"><a class="cancel" href="start">Cancel</a></p>
 
-</div>
+
+  </div>
 </div>
 
 {% endblock %}
