Updated matex journey to be consistent with medex changes

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -99,10 +99,10 @@
     
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Number matched but to different personal details:
+              Number matched but to different personal details (we need to contact you):
             </dt>
             <dd class="nhsuk-summary-list__value">
-             9876543210
+             contact
             </dd>
         
             
@@ -120,14 +120,7 @@
 
 
 
-          <div class="nhsuk-summary-list__row">
-            <dt class="nhsuk-summary-list__key">
-              We need to contact you:
-            </dt>
-            <dd class="nhsuk-summary-list__value">
-             contact
-            </dd>
-          </div>
+          
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
               We cannot confirm your details:
