--- a/app/views/v6-pcn/enter-reference-number-again.html
+++ b/app/views/v6-pcn/enter-reference-number-again.html
@@ -17,7 +17,7 @@ Enter your reference number again
 
 
 
-    <span class="nhsuk-caption">Your details</span>
+    <span class="nhsuk-caption-m">Your details</span>
     <h1 class="nhsuk-heading-l">Enter your reference number again</h1>
     <div class="nhsuk-form-group">
       <label class="nhsuk-label" for="one-half">
