--- a/app/views/v6-pcn/how-to-pay-maternity.html
+++ b/app/views/v6-pcn/how-to-pay-maternity.html
@@ -32,52 +32,54 @@ You didn't have a valid medical exemption certificate
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
             <h1 class="nhsuk-fieldset__heading">
-              You didn't have a valid maternity exemption certificate at the time, but you can still apply
+             Pay your prescription charge and apply for a maternity exemption certificate
             </h1>
           </legend>
 
-          <p>Although you didn't have a valid maternity exemption certificate when you claimed a free prescription, you still have the chance to apply.</p>
 
+          <p>You can use this service to pay the original £9.65 prescription charge.</p>
+         
+          <p>To apply for a maternity exemption certificate, speak to your midwife, doctor or health visitor. They'll complete the application for you.</p>
+          
+          
+          
+
+          
+
+          <div class="nhsuk-warning-callout">
+            <h3 class="nhsuk-warning-callout__label">
+              <span role="text">
+                <span class="nhsuk-u-visually-hidden">Important: </span>
+                Important
+              </span>
+            </h3>
+            <p>You have until <strong>10 July 2023</strong> to get a maternity exemption certificate.</p>
+            <p>If you are not eligible for a maternity exemption certificate you'll need to pay the full amount of the Penalty Charge Notice (PCN).</p>
+          </div>
+          
+          
+
+          
           <h3>Pay the prescription charge now</h3>
-          <p>You will need to pay the original £35.20 prescription charge.</p>
-          <p>When asked to enter the amount you are paying, you just need to type <strong>£17.60</strong> (not the full Penalty Charge Notice amount)</p>
+          <p>You'll need to pay the original £9.65 prescription charge.</p>
+          
          
       
-            <a class="nhsuk-button" href="pay-by-card">Pay now</a>
-          
-          
-
-          <h3>Apply for a maternity exemption certificate</h3>
-
-          <div class="nhsuk-inset-text">
-            <span class="nhsuk-u-visually-hidden">Information: </span>
-            <p>You only have until the 07 May 2023 to get a maternity exemption certificate.</p>
-          </div>
-          <p>Ask your doctor, midwife or health visitor how to apply.</p>
-          <p>You can only apply for a maternity exemption certificate if you:</p>
-
-          <ul>
-            <li>were pregnant at the time you claimed the free prescription (the date on your Penalty Charge Notice)</li>
-            <LI>you had given birth in the previous 12 months</LI>
-          </ul>
-
-          <h3>What happens next?</h3>
-          <p>After your maternity exemption certificate application has been submitted, an automatic check is carried out. You do not need to telephone us.</p>
-          <p>If your application has been successful and you have paid the £17.60 your Penalty Charge Notice will be closed. You don't need to do anything more.</p>
-          <div class="nhsuk-inset-text">
-            <span class="nhsuk-u-visually-hidden">Information: </span>
-            <p>If you are not eligible for a maternity exemption certificate you will need to pay the full amount on the Penalty Charge Notice.</p>
-          </div>
-         
-
+            <a class="nhsuk-button" href="gov-pay-prescription-matex">Pay now</a>
+            <h3>What happens next?</h3>
+            <p>After your maternity exemption certificate application has been submitted, an automatic check is carried out. You do not need to contact us.</p>
+            
+            
+  
+            <p>You can apply for a maternity exemption cetificate if, at the time you claimed the free prescription (the date on your PCN), you:</p>
+            <ul>
+              <li>were pregnant</li>
+              <li>had given birth in the previous 12 months</li>
+            </ul>
         
          
-          <h3>Feedback</h3>
-          <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
-
-          <p><a href="url">Leave feedback</a></p>
-
-              
+        
+            <p>If your application is successful and you pay the £9.65 prescription charge your PCN will be closed. You'll not need to do anything more.</p>
               
                   
               
