--- a/app/views/v5-enquiry/what-happens-next.html
+++ b/app/views/v5-enquiry/what-happens-next.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-  Start page template - NHS.UK prototype kit
+  What happens next
 {% endblock %}
 
 
