--- a/app/views/v6-pcn/enter-reference-number.html
+++ b/app/views/v6-pcn/enter-reference-number.html
@@ -19,7 +19,7 @@ What is your reference number?
 
       <form action="/v2/what-is-dob" method="post" class="form">
 
-        <span class="nhsuk-caption">Your details</span>
+        <span class="nhsuk-caption-m">Your details</span>
         <h1 class="nhsuk-heading-l">
           What is your reference number?
         </h1>
