--- a/app/views/v5-enquiry/check-phone-details.html
+++ b/app/views/v5-enquiry/check-phone-details.html
@@ -52,6 +52,25 @@
         
         <dl class="nhsuk-summary-list">
 
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              [Benefit] number
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+              1234567890
+            </dd>
+        
+            <dd class="nhsuk-summary-list__actions">
+        
+              <a href="change-exemption-number">
+                Change<span class="nhsuk-u-visually-hidden"> name</span>
+              </a>
+        
+            </dd>
+        
+          </div>
+
+
 
 
           <div class="nhsuk-summary-list__row">
