--- a/app/views/v5-enquiry/date-of-birth.html
+++ b/app/views/v5-enquiry/date-of-birth.html
@@ -14,53 +14,56 @@ What is your date of birth?
 
 
 
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
+<div class="nhsuk-grid-row">
+  <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="enter-postcode" method="post" class="form">
+    <form action="enter-postcode" method="post" class="form">
 
-        <span class="nhsuk-caption-m">Your details</span>
-        <h1 class="nhsuk-heading-l">What is your date of birth?</h1>
-        <div class="nhsuk-hint" id="example-hint">
-          For example, 31 3 1980
+      <span class="nhsuk-caption-m">Your details</span>
+      <h1 class="nhsuk-heading-l">What is your date of birth?</h1>
+      <div class="nhsuk-hint" id="example-hint">
+        For example, 31 3 1980
+      </div>
+
+      <div class="nhsuk-date-input" id="example">
+        <div class="nhsuk-date-input__item">
+          <div class="nhsuk-form-group">
+            <label class="nhsuk-label nhsuk-date-input__label" for="day">
+              Day
+            </label>
+            <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="day" name="day" type="text"
+              pattern="[0-9]*" inputmode="numeric">
+          </div>
         </div>
-    
-        <div class="nhsuk-date-input" id="example">
-          <div class="nhsuk-date-input__item">
-            <div class="nhsuk-form-group">
-              <label class="nhsuk-label nhsuk-date-input__label" for="day">
-                Day
-              </label>
-              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="day" name="day" type="text" pattern="[0-9]*" inputmode="numeric">
-            </div>
+        <div class="nhsuk-date-input__item">
+          <div class="nhsuk-form-group">
+            <label class="nhsuk-label nhsuk-date-input__label" for="month">
+              Month
+            </label>
+            <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="month" name="month" type="text"
+              pattern="[0-9]*" inputmode="numeric">
           </div>
-          <div class="nhsuk-date-input__item">
-            <div class="nhsuk-form-group">
-              <label class="nhsuk-label nhsuk-date-input__label" for="month">
-                Month
-              </label>
-              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="month" name="month" type="text" pattern="[0-9]*" inputmode="numeric">
-            </div>
+        </div>
+        <div class="nhsuk-date-input__item">
+          <div class="nhsuk-form-group">
+            <label class="nhsuk-label nhsuk-date-input__label" for="year">
+              Year
+            </label>
+            <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4" id="year" name="year" type="text"
+              pattern="[0-9]*" inputmode="numeric">
           </div>
-          <div class="nhsuk-date-input__item">
-            <div class="nhsuk-form-group">
-              <label class="nhsuk-label nhsuk-date-input__label" for="year">
-                Year
-              </label>
-              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4" id="year" name="year" type="text" pattern="[0-9]*" inputmode="numeric">
-            </div>
-          </div>
-        
-    <div class="nhsuk-form-group">
-    <button class="nhsuk-button" type="submit">
-     Continue
-    </button>
-    </div>
+        </div>
 
-    <p><a href="respond-to-your-letter">Cancel</a></p>
-   
 
-    </div>
+        <button class="nhsuk-button" type="submit">
+          Continue
+        </button>
+
+
+        <p><a href="respond-to-your-letter">Cancel</a></p>
+    </form>
+
   </div>
+</div>
 
 {% endblock %}
