--- a/app/views/v5-enquiry/date-of-birth.html
+++ b/app/views/v5-enquiry/date-of-birth.html
@@ -53,17 +53,20 @@ What is your date of birth?
               pattern="[0-9]*" inputmode="numeric">
           </div>
         </div>
+      </div>
 
-
+     
         <button class="nhsuk-button" type="submit">
           Continue
         </button>
+    
 
+      <p><a href="respond-to-your-letter">Cancel</a></p>
 
-        <p><a href="respond-to-your-letter">Cancel</a></p>
-    </form>
 
   </div>
 </div>
+
+
 
 {% endblock %}
