Updated matex journey to be consistent with medex changes

--- a/app/views/v6-pcn/what-you-need-to-do-next-bsa.html
+++ b/app/views/v6-pcn/what-you-need-to-do-next-bsa.html
@@ -79,8 +79,7 @@ What do you want to do next?
         <div class="nhsuk-details__text">
           <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made the claim,
             you
-            can ask us to review your case.</p>
-          <p><a href="who-can-ask-for-review">Find out if you can ask for a review.</a> </p>
+            can ask us to review your case.<a href="who-can-ask-for-review">Find out if you can ask for a review.</a> </p>
 
         </div>
       </details>
