--- a/app/views/v6-pcn/we-found-a-hc3-cert-lower.html
+++ b/app/views/v6-pcn/we-found-a-hc3-cert-lower.html
@@ -134,7 +134,7 @@ We found a Hc3 cert with lower contribution
 
     <p><h2>Feedback</h2></p>
     <p>Leaving feedback only takes 5 minutes. Your comments are extremely helpful and will help us to provide a better service.</p>
-    <p><a href="">Leave feedback</a></p>
+    <p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae"target="_blank">Leave feedback (opens in a new window)</a></p>
    
   </div>
 </div>
