--- a/app/views/v5-enquiry/what-happens-next-old.html
+++ b/app/views/v5-enquiry/what-happens-next-old.html
@@ -41,7 +41,7 @@ What happens next
       <p>If we cannot confirm you were entitled you will be sent a Penalty Charge Notice. This will include information
         on how and when to pay.</p>
     </div>
-    <p><a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice">Find out more about
+    <p><a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice"target="_blank">Find out more about
         how we use your information (opens in a new window)</a>.</p>
     <a href="did-you-have-this-benefit" class="nhsuk-button">
       Continue
