--- a/app/views/v5-enquiry/what-happens-next.html
+++ b/app/views/v5-enquiry/what-happens-next.html
@@ -36,7 +36,7 @@
 </ul>
 
 
-<p><a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice">Find out more about how we use your information (opens in a new window)</a>.</p>
+<p><a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice"target="_blank">Find out more about how we use your information (opens in a new window)</a>.</p>
   <a href="did-you-have-this-benefit" class="nhsuk-button">
     Continue
   </a>
