--- a/app/views/v6-pcn/exemption-cert-not-valid-pcn-pecs.html
+++ b/app/views/v6-pcn/exemption-cert-not-valid-pcn-pecs.html
@@ -44,7 +44,7 @@ Exemption certification not valid
         <p><h3>Feedback</h3></p>
         <p>Leaving feedback only takes 5 minutes. Your comments are extremely helpful and will help us to provide a better service.</p>
 
-        <p><a href="url">Leave feedback</a></p>
+        <p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae"target="_blank">Leave feedback</a></p>
 
 
     </div>
