--- a/app/views/v6-pcn/exemption-found-refund.html
+++ b/app/views/v6-pcn/exemption-found-refund.html
@@ -60,7 +60,7 @@ Exemption found refund
         
 <p><h2>Feedback</h2></p> 
 <p>Leaving feedback takes 5 minutes. Your comments will help us provide a better service</p>  
-<p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae">Leave feedback (opens in a new window)</a></p>
+<p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae"target="_blank">Leave feedback (opens in a new window)</a></p>
 
 
     </div>
