--- a/app/views/v6-pcn/what-happens-next-bsa.html
+++ b/app/views/v6-pcn/what-happens-next-bsa.html
@@ -31,7 +31,7 @@ What happens next
   <li>tell you how to send us proof you were entitled to free NHS prescriptions if we need this</li>
   <li>let you know the next steps</li>
 </ul>
-<p><a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice">Find out more about how we use your information (opens in a new window)</a>.</p>
+<p><a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice"target="_blank">Find out more about how we use your information (opens in a new window)</a>.</p>
   <a href="did-you-have-this-exemption-bsa" class="nhsuk-button">
     Continue
   </a>
