--- a/app/views/v6-pcn/what-happens-next-copy.html
+++ b/app/views/v6-pcn/what-happens-next-copy.html
@@ -41,7 +41,7 @@
   <li>let you know the next steps</li>
 </ul>
 
-<p><a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice">Find out more about how we use your information (opens in a new window)</a>.</p>
+<p><a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice"target="_blank">Find out more about how we use your information (opens in a new window)</a>.</p>
   <a href="/v4/did-you-have-this-exemption" class="nhsuk-button">
     Continue
   </a>
