--- a/app/views/index.html
+++ b/app/views/index.html
@@ -140,7 +140,7 @@
      <div class="nhsuk-card">
        <div class="nhsuk-card__content">
          <h3 class="nhsuk-card__heading">
-           Enquiry Journey
+           Enquiry Journey PECS
          </h3>
          <p class="nhsuk-card__description nhsuk-u-margin-bottom-5">An online service to challenge an enquiry letter.</p>
          
@@ -158,13 +158,34 @@
        </div>
      </div>
 
+     <div class="nhsuk-card">
+      <div class="nhsuk-card__content">
+        <h3 class="nhsuk-card__heading">
+          Enquiry Journey DECS
+        </h3>
+        <p class="nhsuk-card__description nhsuk-u-margin-bottom-5">An online service to challenge an enquiry letter.</p>
+        
+        <a class="nhsuk-button" href="v5-enquiry-decs/respond-to-your-letter">Latest prototype version</a>
+        <div class="nhsuk-action-link">
+          <a class="nhsuk-action-link__link" href="enquiry">
+            <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
+              <path d="M0 0h24v24H0z" fill="none"></path>
+              <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
+            </svg>
+            
+            <span class="nhsuk-action-link__text">Enquiry Letter Iteration History</span>
+          </a>
+        </div>
+      </div>
+    </div>
+
 
      
  
      <div class="nhsuk-card">
        <div class="nhsuk-card__content">
          <h3 class="nhsuk-card__heading">
-          Penalty Charge Notice Journey
+          Penalty Charge Notice Journey PECS
          </h3>
          <p class="nhsuk-card__description nhsuk-u-margin-bottom-5">An online service to challenge or pay a PCN.</p>
          <a class="nhsuk-button" href="v6-pcn/respond-to-your-letter">Latest prototype version</a>
