content amendments for decs enquiry

--- a/app/views/v5-enquiry-decs/what-happens-next-copy.html
+++ b/app/views/v5-enquiry-decs/what-happens-next-copy.html
@@ -24,14 +24,14 @@ What happens next
       <h2>
         What happens next?
       </h2>
-      <p>We'll try to confirm you were entitled to free or reduced dental costs.</p>
+      <p>We'll try to confirm you were entitled to free or reduced cost NHS dental treatment.</p>
       <p>If we can confirm you were entitled, we'll close your case and no further action will be needed.</p>
       <p>If we cannot confirm you were entitled, you'll be sent  Penalty Charge Notice.</p>
       <p>To try and confirm you were entitled we'll:</p>
 <ul>
-  <li>ask for some details about your benefit, exemption or prepayment certificate</li>
-  <li>check for other reasons you may have been entitled to free or reduced dental costs</li>
-  <li>tell you how to send us proof you were entitled to free or reduced dental costs if we need this</li>
+  <li>ask for some details about your benefit or exemption certificate</li>
+  <li>check for other reasons you may have been entitled to free or reduced cost NHS dental treatment</li>
+  <li>tell you how to send us proof you were entitled to free or reduced cost NHS dental treatment if we need this</li>
  
 </ul>
 
