--- a/app/views/v5-enquiry-decs/what-you-want-to-do-next.html
+++ b/app/views/v5-enquiry-decs/what-you-want-to-do-next.html
@@ -32,7 +32,7 @@ What do you want to do next?
             <div class="nhsuk-radios__item">
                 <input class="nhsuk-radios__input" id="penalty-confirm-pay" name="confirm" type="radio" value="entitlement">
                 <label class="nhsuk-label nhsuk-radios__label" for="entitlement">
-                  Confirm I was entitled to free or reduced dental costs
+                  Confirm I was entitled to free or reduced cost NHS dental treatment
                 </label>
             </div>
             <div class="nhsuk-hint" id="example-with-hint-text-hint">
@@ -41,7 +41,7 @@ What do you want to do next?
             <div class="nhsuk-radios__item">
               <input class="nhsuk-radios__input" id="penalty-confirm-pay" name="confirm" type="radio" value="pay">
               <label class="nhsuk-label nhsuk-radios__label" for="pay">
-                I was not entitled to free or reduced dental costs and want to know what happens next
+                I was not entitled to free or reduced cost NHS dental treatment and want to know what happens next
               </label>
           </div>
           <!-- <div class="nhsuk-hint" id="example-with-hint-text-hint">
@@ -52,7 +52,7 @@ What do you want to do next?
           <div class="nhsuk-radios__item">
             <input class="nhsuk-radios__input" id="penalty-confirm-pay" name="confirm" type="radio" value="entitlement">
             <label class="nhsuk-label nhsuk-radios__label" for="entitlement">
-              I'm not sure if I was entitled to free or reduced dental costs and want to check.
+              I'm not sure if I was entitled to free or reduced cost NHS dental treatment and want to check.
             </label>
         </div>
         <!-- <div class="nhsuk-hint" id="example-with-hint-text-hint">
