--- a/app/views/v5-enquiry-decs/who-can-ask-for-review.html
+++ b/app/views/v5-enquiry-decs/who-can-ask-for-review.html
@@ -23,7 +23,7 @@ Asking for a review
       </h1>
     
       <p>We understand that you may have made an honest mistake and did not mean to do anything wrong.</p>
-      <p>If you have an exceptional reason why you claimed free or reduced dental costs you were not entitled to, you can ask for a review.</p>
+      <p>If you have an exceptional reason why you claimed free or reduced cost NHS dental treatment you were not entitled to, you can ask for a review.</p>
 
       
 
