--- a/app/views/v5-enquiry-decs/cannot-confirm-entitlement.html
+++ b/app/views/v5-enquiry-decs/cannot-confirm-entitlement.html
@@ -33,7 +33,7 @@
         We cannot confirm you were entitled
       </h1>
     
-      <p>The information you've given us does not prove you were entitled to free or reduced dental costs  between 18 November 2019 and 30 November 2019.</p>
+      <p>The information you've given us does not prove you were entitled to free or reduced cost NHS dental treatment  between 18 November 2019 and 30 November 2019.</p>
       
 
       <h2>What to do next</h2>
