--- a/app/views/v5-enquiry-decs/cannot-pay.html
+++ b/app/views/v5-enquiry-decs/cannot-pay.html
@@ -19,7 +19,7 @@ You cannot pay yet
       <p>You have not yet been issued a Penalty Charge Notice (PCN).</p>
       
       <p>We send the enquiry letter before the PCN to give you time to confirm if you were entitled to free NHS prescriptions.</p>
-      <p>If you do not confirm you were entitled to free or reduced dental costs within [number] days (by [date]) we will issue a PCN. When you receive the PCN you will be able to use this service to pay your penalty charge.</p>
+      <p>If you do not confirm you were entitled to free or reduced cost NHS dental treatment within [number] days (by [date]) we will issue a PCN. When you receive the PCN you will be able to use this service to pay your penalty charge.</p>
      
     </div>
   </div>
