--- a/app/views/v5-enquiry-decs/enquiry-letter-details-copy.html
+++ b/app/views/v5-enquiry-decs/enquiry-letter-details-copy.html
@@ -14,7 +14,7 @@ Enquiry Letter
     <div class="nhsuk-grid-column-two-thirds">
       <span class="nhsuk-caption-m">Your details</span>
       <h1>
-        Enquiry letter reference 01234567890
+        Enquiry letter reference 012345678901
       </h1>
 
       <div class="nhsuk-warning-callout">
@@ -24,16 +24,16 @@ Enquiry Letter
             Do not delay
           </span>
         </h3>
-        <p>You now have 28 days to confirm you were entitled to free or reduced dental costs (by 28 March 2018). If you can confirm this, it will resolve the issue and stop you getting a penalty charge.</p>
+        <p>You now have 28 days to confirm you were entitled to free or reduced cost NHS dental treatment (by 28 March 2018). If you can confirm this, it will resolve the issue and stop you getting a penalty charge.</p>
       </div>
      
     
        <h2>Check your details carefully</h2>
 
-       <p>We check details on your prescription match the details on your exemption certificate, qualifying benefit, or prepayment certificate.</p>
-      <p>We have not been able to confirm you were entitled to free or reduced dental costs using these details.</p>
+       <p>We check details on your dental treatment form match the details on your exemption certificate or qualifying benefit.</p>
+      <p>We have not been able to confirm you were entitled to free or reduced cost NHS dental treatment using these details.</p>
       
-      <h3>Details on the prescription</h3>
+      <h3>Details on the dental treatment form</h3>
       <dl class="nhsuk-summary-list">
         <div class="nhsuk-summary-list__row">
           <dt class="nhsuk-summary-list__key">
@@ -67,7 +67,7 @@ Enquiry Letter
         </div>
         <div class="nhsuk-summary-list__row">
           <dt class="nhsuk-summary-list__key">
-            Date prescription was claimed
+            Date dental treatment was claimed 
           </dt>
           <dd class="nhsuk-summary-list__value">
             Between 1 November 2017 and 30 November 2017
@@ -76,7 +76,7 @@ Enquiry Letter
         </div>
         
       </dl>
-      <p>If you were entitled to free or reduced dental costs, answering some questions to confirm this can help us resolve this issue. We can check if you had an exemption certificate or qualifying benefit, or if you had a valid prepayment certificate.  </p>
+      <p>If you were entitled to free or reduced cost NHS dental treatment, answering some questions to confirm this can help us resolve this issue. We can check if you had a valid exemption certificate or qualifying benefit. </p>
       </dl>
     </div>
    
