--- a/app/views/v5-enquiry-decs/enquiry-letter-details.html
+++ b/app/views/v5-enquiry-decs/enquiry-letter-details.html
@@ -24,14 +24,14 @@ Enquiry letter
             Do not delay
           </span>
         </h3>
-        <p>You now have 28 days to confirm you were entitled to free or reduced dental costs (by 28 March 2018). If you can confirm this, it will resolve the issue and stop you getting a penalty charge.</p>
+        <p>You now have 28 days to confirm you were entitled to free or reduced cost NHS dental treatment (by 28 March 2018). If you can confirm this, it will resolve the issue and stop you getting a penalty charge.</p>
       </div>
      
     
        <h2>Check your details carefully</h2>
 
        <p>We check details on your prescription match the details on your exemption certificate, qualifying benefit, or prepayment certificate.</p>
-      <p>We have not been able to confirm you were entitled to free or reduced dental costs using these details.</p>
+      <p>We have not been able to confirm you were entitled to free or reduced cost NHS dental treatment using these details.</p>
      
       <h3>Details on the prescription</h3>
       <dl class="nhsuk-summary-list">
@@ -76,7 +76,7 @@ Enquiry letter
         </div>
         
       </dl>
-      <p>If you were entitled to free or reduced dental costs, answering some questions to confirm this can help us resolve this issue. We can check if you had an exemption certificate or qualifying benefit, or if you had a valid prepayment certificate.</p>
+      <p>If you were entitled to free or reduced cost NHS dental treatment, answering some questions to confirm this can help us resolve this issue. We can check if you had an exemption certificate or qualifying benefit, or if you had a valid prepayment certificate.</p>
       </dl>
     </div>
    
