--- a/app/views/v5-enquiry-decs/we-need-proof.html
+++ b/app/views/v5-enquiry-decs/we-need-proof.html
@@ -43,7 +43,7 @@
   <div class="nhsuk-grid-column-two-thirds">
     <span class="nhsuk-caption-m">Confirm your entitlement</span>
     <h1 class="nhsuk-heading-l">
-      We need proof that you were entitled to claim free or reduced dental costs between 02 September 2022 and 30 September
+      We need proof that you were entitled to claim free or reduced cost NHS dental treatment between 02 September 2022 and 30 September
       2022
     </h1>
 
