--- a/app/views/v5-enquiry-decs/you-will-be-sent-pcn.html
+++ b/app/views/v5-enquiry-decs/you-will-be-sent-pcn.html
@@ -16,22 +16,22 @@ You are not entitled to free NHS prescriptions
   <div class="nhsuk-grid-column-two-thirds">
 
     <h2>
-      Not entitled to free or reduced dental costs
+      Not entitled to free or reduced cost NHS dental treatment
     </h2>
-    <p>If you were not entitled to free or reduced dental costs you will be sent a Penalty Charge Notice (PCN).</p>
-    <p>We send the enquiry letter before the PCN to give you time to confirm you were entitled to free or reduced dental costs
+    <p>If you were not entitled to free or reduced cost NHS dental treatment you will be sent a Penalty Charge Notice (PCN).</p>
+    <p>We send the enquiry letter before the PCN to give you time to confirm you were entitled to free or reduced cost NHS dental treatment,
       which can stop a PCN being issued.</p>
-    <p>If you do not confirm you were entitled to free or reduced dental costs within [number] days (by [date]) we will send a PCN.</p>
+    <p>If you do not confirm you were entitled to free or reduced cost NHS dental treatment within [number] days (by [date]) we will send a PCN.</p>
     <p>You will not be able to make a payment until you receive the PCN.</p>
     <p>Once you have received it, you’ll be able to use this service to pay your penalty charge.</p>
     <details class="nhsuk-details">
       <summary class="nhsuk-details__summary">
         <span class="nhsuk-details__summary-text">
-          I was not entitled to free or reduced dental costs but have an exceptional reason why I made the claim
+          I was not entitled to free or reduced cost NHS dental treatment but have an exceptional reason why I made the claim
         </span>
       </summary>
       <div class="nhsuk-details__text">
-        <p>If you were not entitled to free or reduced dental costs but have an exceptional reason why you made the claim, you
+        <p>If you were not entitled to free or reduced cost NHS dental treatment but have an exceptional reason why you made the claim, you
           can ask us to review your case. <a href="who-can-ask-for-review">Find out if you can ask for a review</a>.</p>
         
 
