Decs enquiry amendments

--- a/app/views/v5-enquiry-decs/cannot-confirm.html
+++ b/app/views/v5-enquiry-decs/cannot-confirm.html
@@ -33,7 +33,7 @@ We cannot confirm you were entitled
           <h3>If you think you were entitled</h2>
 
          
-            <p>Send us proof to show that you were entitled to free or reduced cost NHS dental treatment or had a valid Prescription Prepayment Certificate between 18 November 2019 to 30 November 2019.</p>
+            <p>Send us proof to show that you were entitled to free or reduced cost NHS dental treatment between 18 November 2019 and 30 November 2019.</p>
           
 
           <p><a href="we-need-proof">Find out about what we can accept as proof and where to send it</a>.</p>
