--- a/app/views/v5-enquiry-decs/enquiry-letter-details-copy.html
+++ b/app/views/v5-enquiry-decs/enquiry-letter-details-copy.html
@@ -60,7 +60,7 @@ Enquiry Letter
             Exemption reason ticked
           </dt>
           <dd class="nhsuk-summary-list__value">
-            <p>Has a valid medical exemption certificate</p>
+            <p>Gets Universal credit</p>
             
           </dd>
       
