--- a/app/views/v5-enquiry/adhoc-screens/enquiry-letter-details-locked-decs.html
+++ b/app/views/v5-enquiry/adhoc-screens/enquiry-letter-details-locked-decs.html
@@ -92,7 +92,7 @@
             Date dental treatment was claimed
           </dt>
           <dd class="nhsuk-summary-list__value">
-            <p>Between 1 November and 30 November 2017.</p>
+            <p>Between 1 November 2017 and 30 November 2017.</p>
             
           </dd>
       
