--- a/app/views/v5-enquiry-decs/did-you-have-this-exemption.html
+++ b/app/views/v5-enquiry-decs/did-you-have-this-exemption.html
@@ -26,7 +26,7 @@ Did you have this benefit
       <form action="benefit-exemption" method="get" class="form">
 
         <span class="nhsuk-caption-m">Confirm your entitlement</span>
-        <h2>Did you have a valid [NHSBSA Benefit] between 22 November 2019 and 30 November 2019?</h2>
+        <h2>Did you have a [NHSBSA Benefit] between 22 November 2019 and 30 November 2019?</h2>
         <div class="nhsuk-form-group">
 
           <div class="nhsuk-radios nhsuk-radios">
