--- a/app/views/v5-enquiry-decs/who-can-ask-for-review.html
+++ b/app/views/v5-enquiry-decs/who-can-ask-for-review.html
@@ -31,12 +31,11 @@ Asking for a review
       <p>We will not usually review your enquiry letter if:</p>
       <ul>
         <li>your exemption certificate had expired</li>
-        <li>you feel that you were misadvised by your GP or by pharmacy staff</li>
+        <li>you feel that you were misadvised by your dental practice</li>
         <li>you thought that your benefit entitled you to claim</li>
-        <li>you thought your prescription prepayment certificate would automatically renew</li>
       </ul>
       <h3>What to do next</h3>
-      <p>If you have an exceptional reason why you made the claim at the time, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">contact us to review your enquiry letter</a>.</p>
+      <p>If you have an exceptional reason why you made the claim at the time, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs"target="_blank">contact us to review your enquiry letter (opens in a new window)</a>.</p>
        <p>When you contact us you must include your:</p>     
        <ul>
         <li>reference number 11193492846</li>
