--- a/app/views/v5-enquiry/were-you-claiming-any-benefits-decs.html
+++ b/app/views/v5-enquiry/were-you-claiming-any-benefits-decs.html
@@ -57,7 +57,7 @@
           <div class="nhsuk-radios__item">
             <input class="nhsuk-radios__input" id="income" name="exemptiontype" type="radio" value="income">
             <label class="nhsuk-label nhsuk-radios__label" for="income">
-              Income Support or income-related Employment and Support Allowance
+              Income Support
             </label>
           </div>
           <div class="nhsuk-radios__item">
