decs enquiry screen content updates

--- a/app/views/v5-enquiry-decs/check-personal-details.html
+++ b/app/views/v5-enquiry-decs/check-personal-details.html
@@ -32,8 +32,8 @@ Chcek your personal details
         
         
         <div class="nhsuk-hint" id="contact-hint">
-          We took these details from your prescription.<br><br>
-They should match what was shown on your exemption or prepayment certificate, or on your benefit award.
+          We took these details from your dental treatment form.<br><br>
+          They should match what was shown on your exemption certificate or benefit award.
         </div>
         
         <dl class="nhsuk-summary-list">
