Updated timeout warning modal

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -874,9 +874,9 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
-                            <td class="nhsuk-table__cell">Timeout warning</td>
+                            <td class="nhsuk-table__cell">Timeout warning modal</td>
                             <td class="nhsuk-table__cell">
-                                <a href="v6-pcn/timeout-warning">Timeout warning</a>
+                                <a href="v6-pcn/timeout-warning-modal">Timeout warning modal</a>
                             </td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
