--- a/app/views/v6-pcn-decs/timeout-warning-modal.html
+++ b/app/views/v6-pcn-decs/timeout-warning-modal.html
@@ -7,7 +7,18 @@ What is your reference number?
 {% endblock %}
 
 {% block outerContent %}
-  
+    <div id="tecs-timeout-dialog" tabindex="-1" role="dialog" aria-modal="true" class="tecs-timeout-dialog" aria-labelledby="tecs-timeout-heading tecs-timeout-message">
+        <div>
+            <h1 id="tecs-timeout-heading" class="nhsuk-heading-xl">Your application will time out soon</h1>
+            <p class="nhsuk-body tecs-timeout-dialog__message" aria-hidden="true">We will reset your application if you do not respond in <span id="tecs-timeout-countdown" class="tecs-timeout-dialog__countdown"><strong>4 minutes 59 seconds</strong></span>. We do this to keep your information secure.</p>
+            <p>We will reset your application if you do not respond in five minutes. We do this to keep your information secure.</p>
+            
+            <a id="tecs-timeout-keep-signin-btn" class="nhsuk-button" href="enter-reference-number" role="button">
+                Continue application
+            </a>
+            <div class="tecs-timeout-dialog__link-wrapper"></div></div>
+        </div>
+    <div id="tecs-timeout-overlay" class="tecs-timeout-overlay"></div>
 {% endblock %}
 
 {% block content %}
@@ -38,11 +49,4 @@ What is your reference number?
 
     </div>
   </div>
-
-  <div class="timeout-warning-modal">
-    <p class="nhsuk-heading-l">Timeout warning</p>
-    <p>This is a warning about time etc etc</p>
-    <a href="" class="nhsuk-button nhsuk-u-margin-0">Close</a>
-  </div>
-
 {% endblock %}
