--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -10,9 +10,36 @@
 // Add your custom CSS/Sass styles below...
 ///////////////////////////////////////////
  
-.timeout-warning-modal {
-    border: 4px solid $nhsuk-focus-text-color;
-    padding: 20px;
-    background-color: $color_nhsuk-white;
-}
 
+@media (min-width: 40.0625em) {
+    .tecs-timeout-dialog {
+        width: 435px;
+    }
+
+    .tecs-timeout-dialog {
+        background-color: #fff;
+        border: 5px solid #0b0c0c;
+        left: 50%;
+        overflow-x: hidden;
+        overflow-y: auto;
+        padding: 30px;
+        position: fixed;
+        top: 50%;
+        transform: translate(-50%,-50%);
+        width: 500px;
+        z-index: 1002;
+    }
+
+    .tecs-timeout-overlay {
+        background-color: #0b0c0c;
+        filter: alpha(opacity=80);
+        height: 100%;
+        left: 0;
+        opacity: .8;
+        -moz-opacity: .8;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1001;
+    }
+}
