Updated adhoc page / added session timed out page

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -837,7 +837,7 @@ NHS.UK prototype kit
         <details class="nhsuk-details nhsuk-expander">
             <summary class="nhsuk-details__summary">
                 <span class="nhsuk-details__summary-text">
-                    Experimental Designs
+                    Experimental designs
                 </span>
             </summary>
             
@@ -877,6 +877,51 @@ NHS.UK prototype kit
                             <td class="nhsuk-table__cell">Timeout warning modal</td>
                             <td class="nhsuk-table__cell">
                                 <a href="v6-pcn/timeout-warning-modal">Timeout warning modal</a>
+                            </td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
+        </details>
+
+        <details class="nhsuk-details nhsuk-expander">
+            <summary class="nhsuk-details__summary">
+                <span class="nhsuk-details__summary-text">
+                    Session timeout warnings
+                </span>
+            </summary>
+            
+            <div class="nhsuk-details__text">
+                <table class="nhsuk-table">
+                    <thead role="rowgroup" class="nhsuk-table__head">
+                        <tr role="row">
+                        <th role="columnheader" class="" scope="col">
+                            Page title
+                        </th>
+                        <th role="columnheader" class="" scope="col">
+                            URL
+                        </th>
+                        <th role="columnheader" class="" scope="col">
+                            PECS/DECS
+                        </th>
+                        </tr>
+                    </thead>
+
+                    <tbody class="nhsuk-table__body">
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Session timeout warning modal</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn/timeout-warning-modal">Timeout warning modal</a>
+                            </td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Session timed out page</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn/timeout-page">Session timed out page</a>
                             </td>
                             <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
                         </tr>
