decs enq content amendments

--- a/app/views/v5-enquiry-decs/check-personal-details-dwp.html
+++ b/app/views/v5-enquiry-decs/check-personal-details-dwp.html
@@ -38,8 +38,8 @@ Check your details are correct
         </div> -->
 
         <div class="nhsuk-hint" id="contact-hint">
-          We took these details from your prescription.<br><br>
-They should match what was shown on your exemption or prepayment certificate, or on your benefit award.
+          We took these details from your dental treatment form.<br><br>
+          They should match what was shown on your exemption certificate or benefit award.
         </div>
         
 
