--- a/app/views/v5-enquiry-decs/enquiry-letter-details.html
+++ b/app/views/v5-enquiry-decs/enquiry-letter-details.html
@@ -30,10 +30,10 @@ Enquiry letter
     
        <h2>Check your details carefully</h2>
 
-       <p>We check details on your prescription match the details on your exemption certificate, qualifying benefit, or prepayment certificate.</p>
+       <p>We check details from on your dental treatment form and check these against match the details on your exemption certificate or qualifying benefit.</p>
       <p>We have not been able to confirm you were entitled to free or reduced cost NHS dental treatment using these details.</p>
      
-      <h3>Details on the prescription</h3>
+      <h3>Details on the dental treatment form</h3>
       <dl class="nhsuk-summary-list">
         <div class="nhsuk-summary-list__row">
           <dt class="nhsuk-summary-list__key">
@@ -60,14 +60,14 @@ Enquiry letter
             Exemption reason ticked
           </dt>
           <dd class="nhsuk-summary-list__value">
-            <p>Gets Income Support or income-related Employment and Support Allowance.</p>
+            <p>Gets Universal credit</p>
             
           </dd>
       
         </div>
         <div class="nhsuk-summary-list__row">
           <dt class="nhsuk-summary-list__key">
-            Date prescription was claimed
+            Date dental treatment was claimed
           </dt>
           <dd class="nhsuk-summary-list__value">
             Between 1 November 2017 and 30 November 2017
@@ -76,7 +76,7 @@ Enquiry letter
         </div>
         
       </dl>
-      <p>If you were entitled to free or reduced cost NHS dental treatment, answering some questions to confirm this can help us resolve this issue. We can check if you had an exemption certificate or qualifying benefit, or if you had a valid prepayment certificate.</p>
+      <p>If you were entitled to free or reduced cost NHS dental treatment, answering some questions to confirm this can help us resolve this issue. We can check if you had a valid exemption certificate or qualifying benefit.</p>
       </dl>
     </div>
    
