Decs enquiry content updates

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -586,7 +586,7 @@ NHS.UK prototype kit
                 <tr role="row" class="nhsuk-table__row">
                 <td class="nhsuk-table__cell">Exemption found - You may be entitled to a refund if payments were made</td>
                  <td class="nhsuk-table__cell"><a href="v6-pcn/exemption-found-refund">Exemption found refund</a></td>
-                <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">PECS</strong></td>
+                <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">DECS</strong></td>
                 </tr>
 
             </tbody>
