--- a/app/views/v5-enquiry-decs/what-happens-next.html
+++ b/app/views/v5-enquiry-decs/what-happens-next.html
@@ -29,7 +29,7 @@
       <p>If we cannot confirm you were entitled, you'll be sent  Penalty Charge Notice.</p>
       <p>To try and confirm you were entitled we'll:</p>
 <ul>
-  <li>ask for some details about your benefit, exemption or prepayment certificate</li>
+  <li>ask for some details about your benefit or exemption certificate</li>
   <li>check for other reasons you may have been entitled to free or reduced cost NHS dental treatment</li>
   <li>tell you how to send us proof you were entitled to free or reduced cost NHS dental treatment if we need this</li>
  
