--- a/app/views/v6-pcn-decs/what-you-need-to-do-next.html
+++ b/app/views/v6-pcn-decs/what-you-need-to-do-next.html
@@ -36,7 +36,7 @@ What do you want to do next?
                 </label>
             </div>
             <div class="nhsuk-hint" id="example-with-hint-text-hint">
-              We'll check if you were getting a qualifying benefit, or had a valid exemption or prepayment certificate.
+              We'll check if you were getting a qualifying benefit or had a valid exemption certificate.
             </div>
             <div class="nhsuk-radios__item">
               <input class="nhsuk-radios__input" id="penalty-confirm-pay" name="confirm" type="radio" value="pay">
@@ -75,7 +75,7 @@ What do you want to do next?
           </summary>
           <div class="nhsuk-details__text">
             <p>If you were not entitled to free or reduced cost NHS dental treatment but have an exceptional reason why you made the claim, you
-              can ask us to review your case.<a href="who-can-ask-for-review">Find out if you can ask for a review.</a> </p>
+              can ask us to review your case. <a href="who-can-ask-for-review">Find out if you can ask for a review.</a> </p>
     
           </div>
         </details>
