--- a/app/views/v5-enquiry-decs/were-you-claiming-any-benefits.html
+++ b/app/views/v5-enquiry-decs/were-you-claiming-any-benefits.html
@@ -82,7 +82,7 @@
           <div class="nhsuk-radios__item">
             <input class="nhsuk-radios__input" id="pension" name="exemptiontype" type="radio" value="pension">
             <label class="nhsuk-label nhsuk-radios__label" for="pension">
-              Pension Credit Guarantee Credit award
+              Pension Credit Guarantee Credit
             </label>
           </div>
 
