--- a/app/views/v6-pcn-decs/update-address-dwp.html
+++ b/app/views/v6-pcn-decs/update-address-dwp.html
@@ -25,7 +25,7 @@ What is your address
       <form action="check-personal-details-dwp" method="post" class="form">
 
         <span class="nhsuk-caption-m">Confirm your entitlement</span>
-        <h1 class="nhsuk-heading-l">What was your address when you had [Benefit]?</h1>
+        <h1 class="nhsuk-heading-l">What was your address when you were claiming (or named on a claim for) [Benefit]?</h1>
        
 
           <div class="nhsuk-form-group">
