review page content edit

--- a/app/views/v5-enquiry-decs/we-need-proof.html
+++ b/app/views/v5-enquiry-decs/we-need-proof.html
@@ -94,7 +94,7 @@
         </span>
       </summary>
       <div class="nhsuk-details__text">
-        <p>A clear image of you or your partner's Pension Credit Guarantee Credit award letter.</p>
+        <p>A clear image of your or your partner's Pension Credit Guarantee Credit award letter.</p>
       </div>
     </details>
     <details class="nhsuk-details">
