PECS PCN content updates

--- a/app/views/v6-pcn/penalty-charge-notice-details.html
+++ b/app/views/v6-pcn/penalty-charge-notice-details.html
@@ -240,7 +240,7 @@ Penalty Charge Notice
           Exemption reason ticked
         </dt>
         <dd class="nhsuk-summary-list__value">
-          <p>Gets Income Support or income-related Employment and Support Allowance.</p>
+          <p>Gets Income Support or income-related Employment and Support Allowance</p>
 
         </dd>
 
@@ -258,7 +258,7 @@ Penalty Charge Notice
 
     <p>If you were entitled to free NHS prescriptions, answering some questions to confirm this can help us resolve this
       issue.</p>
-    <p>If you were not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice, you cana pay by
+    <p>If you were not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice, you can pay by
       either:</p>
     <ul>
       <LI>debit or credit card</LI>
