--- a/app/views/v6-pcn/what-happens-next-bsa.html
+++ b/app/views/v6-pcn/what-happens-next-bsa.html
@@ -24,12 +24,14 @@ What happens next
       <h2>
         What happens next?
       </h2>
-<p>To try to confirm you were entitled to free NHS Prescriptions, we’ll:</p>
+<p>We’ll try to confirm you were entitled to free NHS prescriptions.</p>
+<p>If we can confirm you were entitled, we’ll close your case and no further action will be needed.</p>
+<p>If we cannot confirm you were entitled, you’ll need to pay both the penalty charge and the original prescription charge.</p>
+<p>To try and confirm you were entitled we’ll</p>
 <ul>
   <li>ask for some details about your exemption, benefit or prepayment certificate</li>
   <li>check for other reasons you may have been entitled to free NHS prescriptions</li>
   <li>tell you how to send us proof you were entitled to free NHS prescriptions if we need this</li>
-  <li>let you know the next steps</li>
 </ul>
 <p><a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice"target="_blank">Find out more about how we use your information (opens in a new window)</a>.</p>
   <a href="did-you-have-this-exemption-bsa" class="nhsuk-button">
