--- a/app/views/v6-pcn/what-happens-next-copy.html
+++ b/app/views/v6-pcn/what-happens-next-copy.html
@@ -8,16 +8,7 @@
 
 
 {% block content %}
-<div class="nhsuk-phase-banner nhsuk-u-margin-bottom-5 no-print">
-  <p class="nhsuk-phase-banner__content">
-    <strong class="nhsuk-tag nhsuk-phase-banner__content__tag">
-      BETA
-     </strong>
-     <span class="nhsuk-phase-banner__text">
-       This is a new service - your <a class="nhsuk-link" href="#" target="_blank" rel="noopener">feedback<span class="nhsuk-u-visually-hidden"> (opens in a new tab)</span></a> will help us to improve it.
-    </span>
-   </p>
- </div>
+
 <div class="nhsuk-back-link">
   <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
     <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
@@ -33,12 +24,14 @@
       <h2>
         What happens next?
       </h2>
-<p>To try to confirm you were entitled to free NHS Prescriptions, we’ll:</p>
+<p>We’ll try to confirm you were entitled to free NHS prescriptions.</p>
+<p>If we can confirm you were entitled, we’ll close your case and no further action will be needed.</p>
+<p>If we cannot confirm you were entitled, you’ll need to pay both the penalty charge and the original prescription charge.</p>
+<p>To try and confirm you were entitled we’ll</p>
 <ul>
   <li>ask for some details about your exemption, benefit or prepayment certificate</li>
   <li>check for other reasons you may have been entitled to free NHS prescriptions</li>
   <li>tell you how to send us proof you were entitled to free NHS prescriptions if we need this</li>
-  <li>let you know the next steps</li>
 </ul>
 
 <p><a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice"target="_blank">Find out more about how we use your information (opens in a new window)</a>.</p>
