record closed page added to adhoc

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -574,6 +574,14 @@ NHS.UK prototype kit
             </tbody>
             <tbody class="nhsuk-table__body">
                 <tr role="row" class="nhsuk-table__row">
+                <td class="nhsuk-table__cell">Case closed - Debt collection</td>
+                 <td class="nhsuk-table__cell"><a href="v6-pcn/penalty-charge-closed">Penalty Charge Notice has been closed</a></td>
+                <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                </tr>
+
+            </tbody>
+            <tbody class="nhsuk-table__body">
+                <tr role="row" class="nhsuk-table__row">
                 <td class="nhsuk-table__cell">We cannot confirm you were entitled</td>
                  <td class="nhsuk-table__cell"><a href="v6-pcn/cannot-confirm-pcn">We cannot confirm you were entitled</a>
                 </td>
