--- a/app/views/v6-pcn/timeout-warning-modal.html
+++ b/app/views/v6-pcn/timeout-warning-modal.html
@@ -14,8 +14,12 @@
       <p>We will reset your application if you do not respond in five minutes. We do this to keep your information secure.</p>
       
       <a id="tecs-timeout-keep-signin-btn" class="nhsuk-button" href="enter-reference-number" role="button">
-          Continue application
+        Continue application
       </a>
+      <a id="tecs-timeout-keep-signin-btn" class="nhsuk-button nhsuk-button--secondary" href="respond-to-your-letter" role="button">
+        Restart application
+      </a>
+
       <div class="tecs-timeout-dialog__link-wrapper"></div></div>
   </div>
 <div id="tecs-timeout-overlay" class="tecs-timeout-overlay"></div>
