Added new timeout modal / updated content

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -927,6 +927,14 @@ NHS.UK prototype kit
                         </tr>
 
                         <tr role="row" class="nhsuk-table__row">
+                            <td class="nhsuk-table__cell">Session timeout redirect modal</td>
+                            <td class="nhsuk-table__cell">
+                                <a href="v6-pcn/timeout-redirect-modal">Timeout redirect modal</a>
+                            </td>
+                            <td class="nhsuk-table__cell"><strong class="nhsuk-tag">BOTH</strong></td>
+                        </tr>
+
+                        <tr role="row" class="nhsuk-table__row">
                             <td class="nhsuk-table__cell">Session timed out page</td>
                             <td class="nhsuk-table__cell">
                                 <a href="v6-pcn/timeout-page">Session timed out page</a>
