--- a/app/views/v6-pcn-decs/timeout-redirect-modal.html
+++ b/app/views/v6-pcn-decs/timeout-redirect-modal.html
@@ -10,7 +10,7 @@
 <div id="tecs-timeout-dialog" tabindex="-1" role="dialog" aria-modal="true" class="tecs-timeout-dialog" aria-labelledby="tecs-timeout-heading tecs-timeout-message">
   <div>
       <h1 id="tecs-timeout-heading" class="nhsuk-heading-xl">Your application will time out soon</h1>
-      <p class="nhsuk-body tecs-timeout-dialog__message" aria-hidden="true">We will reset your application if you do not respond in <span id="tecs-timeout-countdown" class="tecs-timeout-dialog__countdown"><strong>4 minutes 59 seconds</strong></span>. We do this to keep your information secure.</p>
+      <p class="nhsuk-body tecs-timeout-dialog__message" aria-hidden="true">You are about to be redirected.</p>
       
       <a id="tecs-timeout-keep-signin-btn" class="nhsuk-button" href="enter-reference-number" role="button">
         Continue application
