--- a/app/views/v6-pcn/timeout-warning-modal.html
+++ b/app/views/v6-pcn/timeout-warning-modal.html
@@ -11,13 +11,12 @@
   <div>
       <h1 id="tecs-timeout-heading" class="nhsuk-heading-xl">Your application will time out soon</h1>
       <p class="nhsuk-body tecs-timeout-dialog__message" aria-hidden="true">We will reset your application if you do not respond in <span id="tecs-timeout-countdown" class="tecs-timeout-dialog__countdown"><strong>4 minutes 59 seconds</strong></span>. We do this to keep your information secure.</p>
-      <p>We will reset your application if you do not respond in five minutes. We do this to keep your information secure.</p>
       
       <a id="tecs-timeout-keep-signin-btn" class="nhsuk-button" href="enter-reference-number" role="button">
         Continue application
       </a>
       <a id="tecs-timeout-keep-signin-btn" class="nhsuk-button nhsuk-button--secondary" href="respond-to-your-letter" role="button">
-        Restart application
+        Restart pay/challenge
       </a>
 
       <div class="tecs-timeout-dialog__link-wrapper"></div></div>
