--- a/app/views/v6-pcn/timeout-page.html
+++ b/app/views/v6-pcn/timeout-page.html
@@ -3,7 +3,7 @@
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
 {% block pageTitle %}
-  Your session has timed out
+    You'll need to start again  
 {% endblock %}
 
 {% block outerContent %}
@@ -15,15 +15,15 @@
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
         <h1 class="nhsuk-heading-l">
-            Your session has timed out
+            You'll need to start again
         </h1>
     
         <p>
-            We have reset your session because you did not do anything for 30 minutes. We did this to keep your information secure.
+            You've been timed out as you stopped using the service for 30 minnutes.
         </p>
 
-        <a href="enter-reference-number" class="nhsuk-button">
-            Start again
+        <a href="respond-to-your-letter" class="nhsuk-button">
+            Pay or challenge now
         </a>
     </div>
 </div>
