--- a/app/views/v6-pcn/timeout-page.html
+++ b/app/views/v6-pcn/timeout-page.html
@@ -14,7 +14,7 @@
 
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
-        <span class="nhsuk-caption-m">Pay or challenge and NHS penalty charge</span>
+        <span class="nhsuk-caption-m">Pay or challenge an NHS penalty charge</span>
         <h1 class="nhsuk-heading-l">
             You'll need to start again
         </h1>
