check details content updated

--- a/app/views/v5-enquiry-decs/check-details-2.html
+++ b/app/views/v5-enquiry-decs/check-details-2.html
@@ -61,10 +61,10 @@ Check your contact details are correct
 
         <div class="nhsuk-summary-list__row">
           <dt class="nhsuk-summary-list__key">
-            How we'll contact you
+            How we can contact you
           </dt>
           <dd class="nhsuk-summary-list__value">
-            Email and Telephone
+            Email and telephone
           </dd>
 
           <dd class="nhsuk-summary-list__actions">
