check personal details screen update

--- a/app/views/v5-enquiry-decs/check-personal-details-dwp.html
+++ b/app/views/v5-enquiry-decs/check-personal-details-dwp.html
@@ -92,7 +92,7 @@ Check your details are correct
         
             <dd class="nhsuk-summary-list__actions">
         
-              <a href="update-address">
+              <a href="update-address-dwp">
                 Change<span class="nhsuk-u-visually-hidden"> address</span>
               </a>
         
